--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
@@ -30,4 +30,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Jumbotron {
+  background-image: "https://d1mua5vq38hnzr.cloudfront.net/home-bg-mlb.jpg";
+  /* background-color: lightgreen; */
 }
