--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,10 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: grey
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+/* 
+.Jumbotron {
+  background-image: "https://d1mua5vq38hnzr.cloudfront.net/home-bg-mlb.jpg";
+} */
