--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,3 +41,24 @@ h2 {
   width: 50px;
   margin-right: 10px;
 }
+
+.teamPage-icon {
+  height: 200px;
+  width: auto;
+}
+
+.team-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.team-col-one {
+  padding-right: 20px;
+  margin-right: 50px;
+  text-align: center;
+}
+
+.team-col-two {
+  padding-top: 50px;
+}
