--- a/client/src/App.css
+++ b/client/src/App.css
@@ -62,3 +62,27 @@ h2 {
 .team-col-two {
   padding-top: 50px;
 }
+
+.form-fields {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.create-team {
+  width: 500px;
+}
+
+.form-body {
+  margin-top: 15px;
+  margin-left: 30px;
+}
+
+.create-title {
+  font-size: 300%;
+}
+
+.homepage-body {
+  background-image: './background-image-field.jpg';
+  background-size: 'cover';
+}
