--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,12 +50,12 @@ h2 {
 .team-header {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-evenly;
 }
 
 .team-col-one {
-  padding-right: 20px;
-  margin-right: 50px;
+  /* padding-right: 20px;
+  margin-right: 50px; */
   text-align: center;
 }
 
@@ -85,4 +85,56 @@ h2 {
 .homepage-body {
   background-image: './background-image-field.jpg';
   background-size: 'cover';
+  text-align: center;
 }
+
+.roster-list {
+  text-align: center;
+  margin-left: 10px;
+  margin-right: 10px;
+} 
+
+.roster-listItem {
+  text-align: center;
+}
+
+.team-button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.team-button {
+  margin-right: 10px;
+  margin-top: 10px;
+}
+
+.roster-button {
+  margin-bottom: 10px;
+}
+
+/* .parallax-container {
+  min-height: 380px;
+  line-height: 0;
+  height: auto;
+  color: rgba(255,255,255,.9);
+}
+  .parallax-container .section {
+    width: 100%;
+  }
+
+@media only screen and (max-width : 992px) {
+  .parallax-container .section {
+    position: absolute;
+    top: 40%;
+  }
+  #index-banner .section {
+    top: 10%;
+  }
+}
+
+@media only screen and (max-width : 600px) {
+  #index-banner .section {
+    top: 0;
+  }
+} */
