--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,11 +36,15 @@ h2 {
   padding-left: 10px;
 }
 
-.icon {
-  height: 50px;
-  width: 50px;
+/* h3 {
+  text-align: center;
+} */
+
+/* .icon {
+  height: 75px;
+  width: 75px;
   margin-right: 10px;
-}
+} */
 
 .teamPage-icon {
   height: 200px;
@@ -111,6 +115,37 @@ h2 {
 
 .roster-button {
   margin-bottom: 10px;
+}
+
+.list-group {
+  width: 600px;
+  margin: 10px auto;
+}
+
+.list-group-item {
+  margin-top: 10px;
+  display: grid;
+  grid-template-rows: 30px 30px 30px 30px;
+  grid-template-columns: 200px 400px;
+}
+
+.icon {
+  height: 80px;
+  width: 80px;
+  margin: 5px auto;
+  grid-row: 1 / span 2;
+  grid-column: 1 / span 1;
+  text-align: center;
+}
+
+.team-name {
+  grid-row: 3 / span 2;
+  grid-column: 1 / span 1;
+  margin: 20px auto;
+}
+
+.view-team {
+  width: 200px;
 }
 
 /* .parallax-container {
